FIxed visual bug

--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@
           <button class="btn" onclick="game.init(2, 'pve')">
             1 Player(vs AI)
           </button>
-          <button class="btn" onclick="game.init(4, 'cvc')">CPU vs CPU</button>
+          <button class="btn" onclick="game.init(2, 'cvc')">CPU vs CPU</button>
+          <button class="btn" onclick="game.init(3, 'cvc')">CPU vs CPU vs CPU</button>
+          <button class="btn" onclick="game.init(4, 'cvc')">CPU vs CPU vs CPU vs CPU</button>
           <button class="btn" onclick="game.init(2, 'pvp')">2 Players</button>
           <button class="btn" onclick="game.init(3, 'pvp')">3 Players</button>
           <button class="btn" onclick="game.init(4, 'pvp')">4 Players</button>
