--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <button class="btn" onclick="game.init(2, 'pvp')">2 Players (Human)</button>
         <button class="btn" onclick="game.init(3, 'pvp')">3 Players (Human)</button>
         <button class="btn" onclick="game.init(4, 'pvp')">4 Players (Human)</button>
-        <button class="btn" onclick="game.init(2, 'pve')">CPU v  CPU</button>
+        <button class="btn" onclick="game.init(4, 'cvc')">CPUs v  CPUs</button>
 
         <!-- NEW: Custom Scenarios -->
         <div class="divider" style="margin: 10px 0; opacity: 0.5;"></div>
